fixes CTA blocks covering content

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1003,6 +1003,7 @@ Creates an alert box notification using the `.alert-` prefix. The following opti
 /* line 1, ../sass/components/_cross-links.scss */
 .crosslinks {
   *zoom: 1;
+  clear: left;
 }
 /* line 16, ../sass/layout/_grid.scss */
 .crosslinks:before, .crosslinks:after {
@@ -1013,7 +1014,7 @@ Creates an alert box notification using the `.alert-` prefix. The following opti
 .crosslinks:after {
   clear: both;
 }
-/* line 3, ../sass/components/_cross-links.scss */
+/* line 4, ../sass/components/_cross-links.scss */
 .crosslinks .cta {
   background: #2e2118;
   height: 250px;
@@ -1023,33 +1024,33 @@ Creates an alert box notification using the `.alert-` prefix. The following opti
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-@media (min-width: 34.375em) {
-  /* line 3, ../sass/components/_cross-links.scss */
+@media (min-width: 45em) {
+  /* line 4, ../sass/components/_cross-links.scss */
   .crosslinks .cta {
     width: 100%;
     height: 250px;
   }
 }
 @media (min-width: 55em) {
-  /* line 3, ../sass/components/_cross-links.scss */
+  /* line 4, ../sass/components/_cross-links.scss */
   .crosslinks .cta {
     width: 50%;
     float: left;
   }
 }
 @media (min-width: 62.5em) {
-  /* line 3, ../sass/components/_cross-links.scss */
+  /* line 4, ../sass/components/_cross-links.scss */
   .crosslinks .cta {
     width: 50%;
     height: 250px;
     float: left;
   }
 }
-/* line 26, ../sass/components/_cross-links.scss */
+/* line 28, ../sass/components/_cross-links.scss */
 .crosslinks .cta .bg-img {
   height: 100%;
 }
-/* line 30, ../sass/components/_cross-links.scss */
+/* line 32, ../sass/components/_cross-links.scss */
 .crosslinks .cta .text {
   z-index: 1000;
   margin: 0 auto;
@@ -1059,14 +1060,14 @@ Creates an alert box notification using the `.alert-` prefix. The following opti
   top: 0;
   left: 0;
 }
-/* line 39, ../sass/components/_cross-links.scss */
+/* line 41, ../sass/components/_cross-links.scss */
 .crosslinks .cta .text h3 {
   color: white;
   font-size: 1.6em;
   padding: 1em;
   text-shadow: rgba(0, 0, 0, 0.7) 0 3px 6px;
 }
-/* line 51, ../sass/components/_cross-links.scss */
+/* line 53, ../sass/components/_cross-links.scss */
 .crosslinks .cta:hover .bg-img img {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=75);
   opacity: 0.75;
